--- a/Poketest/app/src/main/res/values/strings.xml
+++ b/Poketest/app/src/main/res/values/strings.xml
@@ -2,7 +2,12 @@
 
     <string name="txt_toolbar_all_pokemon">All Pokemon</string>
     <string name="txt_empty_list_items">Pull to refresh</string>
+
+
+    <string name="txt_retrieve_more_pokemons">We are downloading more pokemons</string>
+
     <string name="error_no_network">No Internet Connection</string>
+    <string name="error_service_retrieve">There is a problem retrieving the Pokemons</string>
 
     <string name="url_pokemon_icon">http://img.pokemondb.net/artwork/%s.jpg</string>
 
