--- a/Poketest/app/src/main/res/values/strings.xml
+++ b/Poketest/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="url_pokemon_gif">http://www.pokexperto.net/3ds/sprites/pokedex/animados/%s.gif</string>
     <string name="url_pokemon_full">http://assets.pokemon.com/assets/cms2/img/pokedex/full/%s.png</string>
 
+    <string name="activity_image_trans">activity_image_transition</string>
+
 </resources>
